# Python-Web---HW6

./: README.md  create_tables.sql  main.py  pyproject.toml  query_1.sql  query_2.sql  quetry_10.sql  quetry_3.sql  quetry_4.sql  quetry_5.sql  quetry_6.sql  quetry_7.sql  quetry_8.sql  quetry_9.sql
